6.4 Added Shape package and corresponding tests.